# Electronic-Vignette-Evidence-backend

./: .gitlab-ci.yml  Makefile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
config/: example.env
eve/: asgi.py  exceptions.py  settings.py  urls.py  utils.py  wsgi.py
eve/auth/: apps.py  urls.py  views.py
eve/authentication/: apps.py  dto.py  models.py  operations.py  serializers.py  services.py  urls.py  views.py
eve/roles/: apps.py  models.py  operations.py  serializers.py  services.py  urls.py  views.py
eve/roles/migrations/: 0001_initial.py  0002_roles.py  0003_auto_20210404_1635.py
eve/statistics/: apps.py  models.py  operations.py  serializers.py  urls.py  views.py
eve/statistics/migrations/: 0001_initial.py
eve/swagger/: generateSwaggerAPI.sh  swagger-api.yaml  swagger-yaml-to-html.py
eve/templates/: swagger-ui.html
eve/users/: apps.py  dto.py  models.py  operations.py  serializers.py  services.py  urls.py  validators.py  views.py
eve/users/migrations/: 0001_initial.py  0002_auto_20210326_1155.py  0002_users.py  0003_auto_20210407_1750.py  0003_users.py  0004_auto_20210419_1637.py  0005_password_hash.py  0006_token.py  0007_auto_20210504_1225.py
eve/vignette/: apps.py  models.py  operations.py  serializers.py  urls.py  views.py
eve/vignette/migrations/: 0001_initial.py  0002_vignette_types.py
eve/vignettes/: apps.py  dto.py  models.py  operations.py  serializers.py  services.py  urls.py  views.py
eve/vignettes/migrations/: 0001_initial.py  (+7 more)
tests/: conftest.py
tests/integration/: conftest.py
(+11 files in other folders)
